PROJECT(Common C)

SET(HEAD_LIST
	common.h)

SET(SRC_LIST
	common.c)

INCLUDE_DIRECTORIES(.)
# LINK_DIRECTORIES()
ADD_LIBRARY(CommonA STATIC ${HEAD_LIST} ${SRC_LIST})
ADD_LIBRARY(CommonSO SHARED ${HEAD_LIST} ${SRC_LIST})
SET_TARGET_PROPERTIES(CommonA PROPERTIES OUTPUT_NAME Common)
SET_TARGET_PROPERTIES(CommonSO PROPERTIES OUTPUT_NAME Common)
#ADD_LIBRARY(Common SHARED ${HEAD_LIST} ${SRC_LIST})

