PROJECT(Server C)

SET(HEAD_LIST
	../common/common.h)

SET(SRC_LIST
	main.c)
#MESSAGE(STATUS ${CMAKE_BINARY_DIR})
#MESSAGE(STATUS ${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(../common .)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
ADD_EXECUTABLE(Server ${SRC_H} ${SRC_LIST})
TARGET_LINK_LIBRARIES(Server libCommon.a)

